# ptrs_orig

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
doc/: crate.md
examples/: dummy-client.rs  dummy-server.rs  tokio-dummy-client.rs
src/: args.rs  bindaddr.rs  error.rs  errors.rs  lib.rs  other_copy.rs  pt.rs  socks.rs  stream.rs
src/constructions/: README.md  transform_closure.rs
src/ffi/: mod.rs
src/pt/: conversion.rs  copy.rs  copy_buffer.rs  mod.rs  stream.rs  transform.rs  wrap.rs
src/sync/: README.md  mod.rs
src/sync/constructions/: mod.rs  stream.rs  trait_alias.rs  trait_with_fn_generics.rs
src/test_utils/: mod.rs  tests.rs
src/transports/: base64.rs  ecdh_ed25519.rs  hex_encoder.rs  mod.rs  prefix_tls_rec_frag.rs  reverse.rs  rustls.rs
src/transports/http/: duplex.rs  mod.rs  simplex.rs  wrap.rs
src/transports/identity/: duplex.rs  mod.rs  simplex.rs  stream.rs  wrap.rs
src/transports/rustls/: certs.rs  mod.rs  rustls.rs
