[package]
name = "ptrs"
description = "An implementation of the Pluggable Transports protocol."
version = "0.1.0"
authors = ["Jack Wampler <jack@wampler.co>"]
readme = "README.md"
repository = "https://github.com/jmwample/ptrs"
edition = "2018"

[dependencies]
thiserror = "1.0.*"
url = "2,2,2"
itertools = "0.10.0"
ring = "0.16.20"

# standard crate data is left out
[dev-dependencies]
nix = "0.23.0"
tempfile = "3.2.0"
tokio = {version = "1", features=["full"] }
hex-literal = "0.3.3"

[lib]
crate-type = ["lib", "staticlib", "dylib"]


[[example]]
name = "dummy-client"
path = "examples/dummy-client.rs"

[[example]]
name = "dummy-server"
path = "examples/dummy-server.rs"

[[example]]
name = "tokio-dummy-client"
path = "examples/tokio-dummy-client.rs"
