[package]
name = "ptrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ptrs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.7", features = ["derive"]}
hex = "0.4.3"
socks5-server = "0.10.0"
socks5-proto = "0.4.0"
tokio = { version = "1.33", features = ["io-util", "rt-multi-thread", "net", "rt", "macros", "sync", "signal", "time", "fs"] }
tokio-util = { version = "0.7.10" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
futures = "0.3.14"
once_cell = "1.2.0"
async-trait = "0.1.74"
pin-project = "1.1.3"
http = "0.2.9"
lazy_static = "1.4.0"

[dev-dependencies]
os_pipe = "1.1.4"
tokio-socks = "0.5.1"
tempfile = "3.8.1"

[[bin]]
name="proxy"
path="src/bin/proxy/proxy.rs"
test=true
