[package]
name = "ptrs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library supporting construction and integration of pluggable network transports in rust."


[lib]
name = "ptrs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.7", features = ["derive"]}
hex = "0.4.3"
tokio = { version = "1.33", features = ["io-util", "rt-multi-thread", "net", "rt", "macros", "sync", "signal", "time", "fs"] }
tokio-util = { version = "0.7.10" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
futures = "0.3.14"
once_cell = "1.2.0"
async-trait = "0.1.74"
pin-project = "1.1.3"
http = "0.2.9"
lazy_static = "1.4.0"

async-compat = "0.2.3"
arti-client = { package = "arti-client", version = "0.11.0", default-features = false }
cfg-if = "1.0.0"
safelog = { version = "0.3.2" }
tor-config = { version = "0.9.6" }
tor-error = { version = "0.5.4", default-features = false, features = ["tracing"] }
tor-hsrproxy = { version = "0.2.0", optional = true }
tor-hsservice = { version = "0.4.0", optional = true }
tor-rpcbase = { version = "0.1.2", optional = true }
tor-rtcompat = { version = "0.9.5", features = ["tokio", "rustls"]}
tor-socksproto = { version = "0.7.5" }

rustls = "0.21.8"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.4"
# rustls-pki-types = "0.2.1"
webpki-roots = "0.25.2"
rcgen = { version = "0.11.3", features = ["pem", "x509-parser"] }
x509-parser = { version = "0.15.1", features = ["verify"] }

[dev-dependencies]
os_pipe = "1.1.4"
tempfile = "3.8.1"

[[bin]]
name="proxy"
path="src/bin/proxy/proxy.rs"
test=true
